--- a/index.html
+++ b/index.html
@@ -97,16 +97,14 @@
         <div class="recipesList">
           <!-- Chicken Skewers -->
           <div class="recipe All Meat Lunch">
+            <img
+              src="images/food_samples/Chicken_Skewers.webp"
+              alt="Chicken Skewers"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Chicken_Skewers.html">
-              <img
-                src="images/food_samples/Chicken_Skewers.webp"
-                alt="Chicken Skewers"
-                loading="lazy"
-              />
-              <span class="title"
-                >Chicken Skewers with Slices of Sweet Peppers</span
-              >
+              <span class="title">Chicken Skewers</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
                 <div class="mainIngredientList">
@@ -129,13 +127,13 @@
 
           <!-- Spaghetti Bolognese -->
           <div class="recipe All Meat Lunch">
+            <img
+              src="images/food_samples/Spaghetti_Bolognese.webp"
+              alt="Spaghetti Bolognese"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Spaghetti_Bolognese.html">
-              <img
-                src="images/food_samples/Spaghetti_Bolognese.webp"
-                alt="Spaghetti Bolognese"
-                loading="lazy"
-              />
               <span class="title">Spaghetti Bolognese</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -160,14 +158,14 @@
 
           <!-- Grilled Chicken -->
           <div class="recipe All Meat Lunch">
+            <img
+              src="images/food_samples/Grilled_Chicken_with_Herb_Marinade.webp"
+              alt="Grilled Chicken"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Grilled_Chicken.html">
-              <img
-                src="images/food_samples/Grilled_Chicken_with_Herb_Marinade.webp"
-                alt="Grilled Chicken"
-                loading="lazy"
-              />
-              <span class="title">Grilled Chicken with Herb Marinade</span>
+              <span class="title">Grilled Chicken</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
                 <div class="mainIngredientList">
@@ -191,13 +189,13 @@
 
           <!-- Beef Stir Fry -->
           <div class="recipe All Meat Lunch">
+            <img
+              src="images/food_samples/Beef_Stir_Fry.webp"
+              alt="Beef Stir Fry"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Beef_Stir.html">
-              <img
-                src="images/food_samples/Beef_Stir_Fry.webp"
-                alt="Beef Stir Fry"
-                loading="lazy"
-              />
               <span class="title">Beef Stir Fry</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -222,13 +220,13 @@
 
           <!-- Apple Pie -->
           <div class="recipe All Dessert">
+            <img
+              src="images/food_samples/Apple_Pie.webp"
+              alt="Apple Pie"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Apple_Pie.html">
-              <img
-                src="images/food_samples/Apple_Pie.webp"
-                alt="Apple Pie"
-                loading="lazy"
-              />
               <span class="title">Apple Pie</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -253,13 +251,13 @@
 
           <!-- French Butter Croissant -->
           <div class="recipe All Breakfast">
+            <img
+              src="images/food_samples/French_Butter_Croissant.webp"
+              alt="Croissant"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/French_Croissant.html">
-              <img
-                src="images/food_samples/French_Butter_Croissant.webp"
-                alt="Croissant"
-                loading="lazy"
-              />
               <span class="title">French Butter Croissant</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -284,13 +282,13 @@
 
           <!-- Classic Pancakes -->
           <div class="recipe All Breakfast">
+            <img
+              src="images/food_samples/Classic_Pancakes.webp"
+              alt="Pancakes"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Classic_Pancakes.html">
-              <img
-                src="images/food_samples/Classic_Pancakes.webp"
-                alt="Pancakes"
-                loading="lazy"
-              />
               <span class="title">Classic Pancakes</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -315,13 +313,13 @@
 
           <!-- Vegetable Stir Fry -->
           <div class="recipe All Vegetarian Lunch">
+            <img
+              src="images/food_samples/Vegetable_Stir_Fry.webp"
+              alt="Vegetable Stir Fry"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Vegetable_Stir.html">
-              <img
-                src="images/food_samples/Vegetable_Stir_Fry.webp"
-                alt="Vegetable Stir Fry"
-                loading="lazy"
-              />
               <span class="title">Vegetable Stir Fry</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -346,13 +344,13 @@
 
           <!-- Chocolate Cake -->
           <div class="recipe All Dessert">
+            <img
+              src="images/food_samples/Chocolate_Cake.webp"
+              alt="Chocolate Cake"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Chocolate_Cake.html">
-              <img
-                src="images/food_samples/Chocolate_Cake.webp"
-                alt="Chocolate Cake"
-                loading="lazy"
-              />
               <span class="title">Chocolate Cake</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -377,13 +375,13 @@
 
           <!-- French Baguette -->
           <div class="recipe All Lunch">
+            <img
+              src="images/food_samples/French_Baguette.webp"
+              alt="Baguette"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/French_Baguette.html">
-              <img
-                src="images/food_samples/French_Baguette.webp"
-                alt="Baguette"
-                loading="lazy"
-              />
               <span class="title">French Baguette</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -408,13 +406,13 @@
 
           <!-- French Toast -->
           <div class="recipe All Breakfast">
+            <img
+              src="images/food_samples/French_Toast.webp"
+              alt="French Toast"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/French_Toast.html">
-              <img
-                src="images/food_samples/French_Toast.webp"
-                alt="French Toast"
-                loading="lazy"
-              />
               <span class="title">French Toast</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -439,13 +437,13 @@
 
           <!-- Roasted Vegetables -->
           <div class="recipe All Vegetarian Lunch">
+            <img
+              src="images/food_samples/Roasted_Vegetables.webp"
+              alt="Roasted Vegetables"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Roasted_Vegetables.html">
-              <img
-                src="images/food_samples/Roasted_Vegetables.webp"
-                alt="Roasted Vegetables"
-                loading="lazy"
-              />
               <span class="title">Roasted Vegetables</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -470,13 +468,13 @@
 
           <!-- Cheesecake -->
           <div class="recipe All Dessert">
+            <img
+              src="images/food_samples/Cheesecake.webp"
+              alt="Cheesecake"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Cheesecake.html">
-              <img
-                src="images/food_samples/Cheesecake.webp"
-                alt="Cheesecake"
-                loading="lazy"
-              />
               <span class="title">Cheesecake</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -500,13 +498,13 @@
 
           <!-- Indian Naan Bread -->
           <div class="recipe All Lunch">
+            <img
+              src="images/food_samples/Indian_Naan_Bread.webp"
+              alt="Naan Bread"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Naan_Bread.html">
-              <img
-                src="images/food_samples/Indian_Naan_Bread.webp"
-                alt="Naan Bread"
-                loading="lazy"
-              />
               <span class="title">Indian Naan Bread</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -531,13 +529,13 @@
 
           <!-- Full English Breakfast -->
           <div class="recipe All Breakfast">
+            <img
+              src="images/food_samples/Full_English_Breakfast.webp"
+              alt="English Breakfast"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/English_Breakfast.html">
-              <img
-                src="images/food_samples/Full_English_Breakfast.webp"
-                alt="English Breakfast"
-                loading="lazy"
-              />
               <span class="title">Full English Breakfast</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -562,13 +560,13 @@
 
           <!-- Eggplant Parmesan -->
           <div class="recipe All Vegetarian Lunch">
+            <img
+              src="images/food_samples/Eggplant_Parmesan.webp"
+              alt="Eggplant Parmesan"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Eggplant_Parmesan.html">
-              <img
-                src="images/food_samples/Eggplant_Parmesan.webp"
-                alt="Eggplant Parmesan"
-                loading="lazy"
-              />
               <span class="title">Eggplant Parmesan</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -592,13 +590,13 @@
 
           <!-- Banana Bread -->
           <div class="recipe All Dessert">
+            <img
+              src="images/food_samples/Banana_Bread.webp"
+              alt="Banana Bread"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Banana_Bread.html">
-              <img
-                src="images/food_samples/Banana_Bread.webp"
-                alt="Banana Bread"
-                loading="lazy"
-              />
               <span class="title">Banana Bread</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -623,13 +621,13 @@
 
           <!-- Sourdough Bread -->
           <div class="recipe All Lunch">
+            <img
+              src="images/food_samples/Sourdough_Bread.webp"
+              alt="Sourdough Bread"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Sourdough_Bread.html">
-              <img
-                src="images/food_samples/Sourdough_Bread.webp"
-                alt="Sourdough Bread"
-                loading="lazy"
-              />
               <span class="title">Sourdough Bread</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -654,13 +652,13 @@
 
           <!-- Cheese Omelette -->
           <div class="recipe All Breakfast">
+            <img
+              src="images/food_samples/Cheese_Veggie_Omelette.webp"
+              alt="Omelette"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Cheese_Omelette.html">
-              <img
-                src="images/food_samples/Cheese_Veggie_Omelette.webp"
-                alt="Omelette"
-                loading="lazy"
-              />
               <span class="title">Cheese & Veggie Omelette</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -685,13 +683,13 @@
 
           <!-- Vegetable Curry -->
           <div class="recipe All Vegetarian Lunch">
+            <img
+              src="images/food_samples/Vegetable_Curry.webp"
+              alt="Vegetable Curry"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Vegetable_Curry.html">
-              <img
-                src="images/food_samples/Vegetable_Curry.webp"
-                alt="Vegetable Curry"
-                loading="lazy"
-              />
               <span class="title">Vegetable Curry</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -716,13 +714,13 @@
 
           <!-- Peach Crumble -->
           <div class="recipe All Dessert">
+            <img
+              src="images/food_samples/Peach_Crumble.webp"
+              alt="Peach Crumble"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Peach_Crumble.html">
-              <img
-                src="images/food_samples/Peach_Crumble.webp"
-                alt="Peach Crumble"
-                loading="lazy"
-              />
               <span class="title">Peach Crumble</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -746,13 +744,13 @@
 
           <!-- German Pretzel -->
           <div class="recipe All Lunch">
+            <img
+              src="images/food_samples/German_Soft_Pretzel.webp"
+              alt="Pretzel"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/German_Pretzel.html">
-              <img
-                src="images/food_samples/German_Soft_Pretzel.webp"
-                alt="Pretzel"
-                loading="lazy"
-              />
               <span class="title">German Soft Pretzel</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -777,13 +775,13 @@
 
           <!-- Belgian Waffles -->
           <div class="recipe All Breakfast">
+            <img
+              src="images/food_samples/Crispy_Belgian_Waffles.webp"
+              alt="Waffles"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Belgian_Waffles.html">
-              <img
-                src="images/food_samples/Crispy_Belgian_Waffles.webp"
-                alt="Waffles"
-                loading="lazy"
-              />
               <span class="title">Crispy Belgian Waffles</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -808,13 +806,13 @@
 
           <!-- Grilled Lamb Chops -->
           <div class="recipe All Meat Lunch">
+            <img
+              src="images/food_samples/Grilled_Lamb_Chops.webp"
+              alt="Lamb Chops"
+              loading="lazy"
+            />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Lamb_Chops.html">
-              <img
-                src="images/food_samples/Grilled_Lamb_Chops.webp"
-                alt="Lamb Chops"
-                loading="lazy"
-              />
               <span class="title">Grilled Lamb Chops</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
