--- a/index.html
+++ b/index.html
@@ -95,6 +95,129 @@
         <h4>Today's Handpicked Delights – Ready to Cook!</h4>
         <!-- Recipe List-->
         <div class="recipesList">
+          <!-- French Butter Croissant -->
+          <div class="recipe All Breakfast">
+            <img
+              src="images/food_samples/French_Butter_Croissant.webp"
+              alt="Croissant"
+              loading="lazy"
+            />
+            <div class="like"><i class="fa-solid fa-heart"></i></div>
+            <a href="pages/French_Croissant.html">
+              <span class="title">French Butter Croissant</span>
+              <div class="mainIngredients">
+                <span class="heading">Main Ingredients:</span>
+                <div class="mainIngredientList">
+                  <span class="mainIngredient">Flour</span>
+                  <span class="mainIngredient">Butter</span>
+                  <span class="mainIngredient">Yeast</span>
+                </div>
+              </div>
+              <div class="info">
+                <div class="timer">
+                  <i class="bx bxs-stopwatch"></i
+                  ><span class="time">50min</span>
+                </div>
+                <div class="type">
+                  <i class="fa-solid fa-utensils"></i
+                  ><span class="mealType">Bread</span>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <!-- Chocolate Glazed Donuts -->
+          <div class="recipe All Dessert">
+            <img
+              src="images/food_samples/Chocolate_Cake.webp"
+              alt="Chocolate Cake"
+              loading="lazy"
+            />
+            <div class="like"><i class="fa-solid fa-heart"></i></div>
+            <a href="pages/Chocolate_Cake.html">
+              <span class="title">Chocolate Glazed Donuts</span>
+              <div class="mainIngredients">
+                <span class="heading">Main Ingredients:</span>
+                <div class="mainIngredientList">
+                  <span class="mainIngredient">Cocoa Powder</span>
+                  <span class="mainIngredient">Flour</span>
+                  <span class="mainIngredient">Eggs</span>
+                </div>
+              </div>
+              <div class="info">
+                <div class="timer">
+                  <i class="bx bxs-stopwatch"></i
+                  ><span class="time">1hr 10min</span>
+                </div>
+                <div class="type">
+                  <i class="fa-solid fa-utensils"></i
+                  ><span class="mealType">Dessert</span>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <!-- Cheesecake -->
+          <div class="recipe All Dessert">
+            <img
+              src="images/food_samples/Cheesecake.webp"
+              alt="Cheesecake"
+              loading="lazy"
+            />
+            <div class="like"><i class="fa-solid fa-heart"></i></div>
+            <a href="pages/Cheesecake.html">
+              <span class="title">Cheesecake</span>
+              <div class="mainIngredients">
+                <span class="heading">Main Ingredients:</span>
+                <div class="mainIngredientList">
+                  <span class="mainIngredient">Cream Cheese</span>
+                  <span class="mainIngredient">Graham Crackers</span>
+                </div>
+              </div>
+              <div class="info">
+                <div class="timer">
+                  <i class="bx bxs-stopwatch"></i
+                  ><span class="time">1hr 20min</span>
+                </div>
+                <div class="type">
+                  <i class="fa-solid fa-utensils"></i
+                  ><span class="mealType">Dessert</span>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <!-- Classic Pancakes -->
+          <div class="recipe All Breakfast">
+            <img
+              src="images/food_samples/Classic_Pancakes.webp"
+              alt="Pancakes"
+              loading="lazy"
+            />
+            <div class="like"><i class="fa-solid fa-heart"></i></div>
+            <a href="pages/Classic_Pancakes.html">
+              <span class="title">Classic Pancakes</span>
+              <div class="mainIngredients">
+                <span class="heading">Main Ingredients:</span>
+                <div class="mainIngredientList">
+                  <span class="mainIngredient">Flour</span>
+                  <span class="mainIngredient">Milk</span>
+                  <span class="mainIngredient">Eggs</span>
+                </div>
+              </div>
+              <div class="info">
+                <div class="timer">
+                  <i class="bx bxs-stopwatch"></i
+                  ><span class="time">20min</span>
+                </div>
+                <div class="type">
+                  <i class="fa-solid fa-utensils"></i
+                  ><span class="mealType">Breakfast</span>
+                </div>
+              </div>
+            </a>
+          </div>
+
           <!-- Chicken Skewers -->
           <div class="recipe All Meat Lunch">
             <img
@@ -249,68 +372,6 @@
             </a>
           </div>
 
-          <!-- French Butter Croissant -->
-          <div class="recipe All Breakfast">
-            <img
-              src="images/food_samples/French_Butter_Croissant.webp"
-              alt="Croissant"
-              loading="lazy"
-            />
-            <div class="like"><i class="fa-solid fa-heart"></i></div>
-            <a href="pages/French_Croissant.html">
-              <span class="title">French Butter Croissant</span>
-              <div class="mainIngredients">
-                <span class="heading">Main Ingredients:</span>
-                <div class="mainIngredientList">
-                  <span class="mainIngredient">Flour</span>
-                  <span class="mainIngredient">Butter</span>
-                  <span class="mainIngredient">Yeast</span>
-                </div>
-              </div>
-              <div class="info">
-                <div class="timer">
-                  <i class="bx bxs-stopwatch"></i
-                  ><span class="time">50min</span>
-                </div>
-                <div class="type">
-                  <i class="fa-solid fa-utensils"></i
-                  ><span class="mealType">Bread</span>
-                </div>
-              </div>
-            </a>
-          </div>
-
-          <!-- Classic Pancakes -->
-          <div class="recipe All Breakfast">
-            <img
-              src="images/food_samples/Classic_Pancakes.webp"
-              alt="Pancakes"
-              loading="lazy"
-            />
-            <div class="like"><i class="fa-solid fa-heart"></i></div>
-            <a href="pages/Classic_Pancakes.html">
-              <span class="title">Classic Pancakes</span>
-              <div class="mainIngredients">
-                <span class="heading">Main Ingredients:</span>
-                <div class="mainIngredientList">
-                  <span class="mainIngredient">Flour</span>
-                  <span class="mainIngredient">Milk</span>
-                  <span class="mainIngredient">Eggs</span>
-                </div>
-              </div>
-              <div class="info">
-                <div class="timer">
-                  <i class="bx bxs-stopwatch"></i
-                  ><span class="time">20min</span>
-                </div>
-                <div class="type">
-                  <i class="fa-solid fa-utensils"></i
-                  ><span class="mealType">Breakfast</span>
-                </div>
-              </div>
-            </a>
-          </div>
-
           <!-- Vegetable Stir Fry -->
           <div class="recipe All Vegetarian Lunch">
             <img
@@ -337,37 +398,6 @@
                 <div class="type">
                   <i class="fa-solid fa-utensils"></i
                   ><span class="mealType">Vegetarian</span>
-                </div>
-              </div>
-            </a>
-          </div>
-
-          <!-- Chocolate Cake -->
-          <div class="recipe All Dessert">
-            <img
-              src="images/food_samples/Chocolate_Cake.webp"
-              alt="Chocolate Cake"
-              loading="lazy"
-            />
-            <div class="like"><i class="fa-solid fa-heart"></i></div>
-            <a href="pages/Chocolate_Cake.html">
-              <span class="title">Chocolate Cake</span>
-              <div class="mainIngredients">
-                <span class="heading">Main Ingredients:</span>
-                <div class="mainIngredientList">
-                  <span class="mainIngredient">Cocoa Powder</span>
-                  <span class="mainIngredient">Flour</span>
-                  <span class="mainIngredient">Eggs</span>
-                </div>
-              </div>
-              <div class="info">
-                <div class="timer">
-                  <i class="bx bxs-stopwatch"></i
-                  ><span class="time">1hr 10min</span>
-                </div>
-                <div class="type">
-                  <i class="fa-solid fa-utensils"></i
-                  ><span class="mealType">Dessert</span>
                 </div>
               </div>
             </a>
@@ -461,36 +491,6 @@
                 <div class="type">
                   <i class="fa-solid fa-utensils"></i
                   ><span class="mealType">Vegetarian</span>
-                </div>
-              </div>
-            </a>
-          </div>
-
-          <!-- Cheesecake -->
-          <div class="recipe All Dessert">
-            <img
-              src="images/food_samples/Cheesecake.webp"
-              alt="Cheesecake"
-              loading="lazy"
-            />
-            <div class="like"><i class="fa-solid fa-heart"></i></div>
-            <a href="pages/Cheesecake.html">
-              <span class="title">Cheesecake</span>
-              <div class="mainIngredients">
-                <span class="heading">Main Ingredients:</span>
-                <div class="mainIngredientList">
-                  <span class="mainIngredient">Cream Cheese</span>
-                  <span class="mainIngredient">Graham Crackers</span>
-                </div>
-              </div>
-              <div class="info">
-                <div class="timer">
-                  <i class="bx bxs-stopwatch"></i
-                  ><span class="time">1hr 20min</span>
-                </div>
-                <div class="type">
-                  <i class="fa-solid fa-utensils"></i
-                  ><span class="mealType">Dessert</span>
                 </div>
               </div>
             </a>
