--- a/pages/Chocolate_Cake.html
+++ b/pages/Chocolate_Cake.html
@@ -7,7 +7,7 @@
       name="description"
       content="recipe from all variety of types and cultures"
     />
-    <title>Chocolate Cake</title>
+    <title>Chocolate Glazed Donuts</title>
     <link rel="icon" type="svg" href="../images/icons/black cooking hat.svg" />
     <link
       rel="icon"
@@ -82,18 +82,18 @@
       <section class="wrapper hidden">
         <section class="recipeHeader">
           <div class="recipeDetail">
-            <h1>Chocolate Cake</h1>
+            <h1>Chocolate Glazed Donuts</h1>
             <div class="timeAndType">
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
                 <div class="duration">
-                  <span>PREP TIME</span><span>30 Minutes</span>
+                  <span>PREP TIME</span><span>20 Minutes</span>
                 </div>
               </div>
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
                 <div class="duration">
-                  <span>COOK TIME</span><span>40 Minutes</span>
+                  <span>COOK TIME</span><span>10 Minutes</span>
                 </div>
               </div>
               <div class="specificMealType container">
@@ -105,39 +105,39 @@
         <section class="imageAndNutrition">
           <img
             src="../images/food_samples/Chocolate_Cake.webp"
-            alt="Chocolate Cake"
+            alt="Chocolate Glazed Donuts"
           />
           <div class="nutrition">
             <h4>Nutrition Information</h4>
             <table>
               <tr>
                 <td>Calories</td>
-                <td style="text-align: right">350 kcal</td>
+                <td style="text-align: right">220 kcal</td>
               </tr>
               <tr>
                 <td>Total Fat</td>
-                <td style="text-align: right">18 g</td>
+                <td style="text-align: right">8 g</td>
               </tr>
               <tr>
                 <td>Protein</td>
-                <td style="text-align: right">6 g</td>
+                <td style="text-align: right">4 g</td>
               </tr>
               <tr>
                 <td>Carbohydrate</td>
-                <td style="text-align: right">45 g</td>
+                <td style="text-align: right">35 g</td>
               </tr>
               <tr>
                 <td>Cholesterol</td>
-                <td style="text-align: right">50 mg</td>
+                <td style="text-align: right">35 mg</td>
               </tr>
             </table>
           </div>
         </section>
         <section class="description">
           <p>
-            A rich and decadent chocolate cake that’s moist, fluffy, and perfect
-            for any celebration. Topped with a silky chocolate ganache, this
-            cake is a chocolate lover’s dream.
+            Light and fluffy baked donuts dipped in a rich chocolate glaze.
+            Perfectly sweet with a melt-in-your-mouth texture, these donuts are
+            an irresistible treat for breakfast or dessert.
           </p>
         </section>
         <section class="ingredientAndRecommendations">
@@ -149,43 +149,53 @@
                 all-purpose flour</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 2 cups (400g)
-                sugar</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> ¾ cup (90g)
-                cocoa powder</label
+                ><input type="checkbox" class="customCheckbox" /> ½ cup (100g)
+                granulated sugar</label
               ><br />
               <label
                 ><input type="checkbox" class="customCheckbox" /> 2 tsp baking
                 powder</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 ½ tsp baking
-                soda</label
+                ><input type="checkbox" class="customCheckbox" /> ¼ tsp
+                nutmeg</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 tsp
+                ><input type="checkbox" class="customCheckbox" /> ½ tsp
                 salt</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 cup (240ml)
+                ><input type="checkbox" class="customCheckbox" /> ¾ cup (180ml)
                 milk</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> ½ cup (120ml)
-                vegetable oil</label
+                ><input type="checkbox" class="customCheckbox" /> 2 large
+                eggs</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 2 eggs</label
+                ><input type="checkbox" class="customCheckbox" /> 2 tbsp melted
+                butter</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 2 tsp vanilla
+                ><input type="checkbox" class="customCheckbox" /> 1 tsp vanilla
                 extract</label
               ><br />
+              <h3 style="margin-top: 15px">Chocolate Glaze:</h3>
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 cup (240ml)
-                boiling water</label
+                ><input type="checkbox" class="customCheckbox" /> 1½ cups (180g)
+                powdered sugar</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> ¼ cup (30g)
+                cocoa powder</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 3-4 tbsp
+                milk</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 1 tsp vanilla
+                extract</label
               ><br />
             </form>
           </div>
@@ -280,36 +290,30 @@
             <h2>Instructions</h2>
             <dl>
               <dt>1. Preheat the Oven</dt>
-              <dd>
-                Preheat your oven to 350°F (175°C). Grease and flour two 9-inch
-                round cake pans.
-              </dd>
+              <dd>Preheat oven to 375°F (190°C). Grease a donut pan.</dd>
               <dt>2. Mix Dry Ingredients</dt>
               <dd>
-                In a large bowl, sift together flour, sugar, cocoa powder,
-                baking powder, baking soda, and salt.
+                In a bowl, whisk flour, sugar, baking powder, nutmeg, and salt.
               </dd>
-              <dt>3. Add Wet Ingredients</dt>
+              <dt>3. Combine Wet Ingredients</dt>
               <dd>
-                Add milk, vegetable oil, eggs, and vanilla extract to the dry
-                ingredients. Mix on medium speed until well combined.
+                In another bowl, mix milk, eggs, melted butter, and vanilla.
+                Pour into dry ingredients and stir until just combined.
               </dd>
-              <dt>4. Add Boiling Water</dt>
+              <dt>4. Fill Donut Pan</dt>
               <dd>
-                Gradually add boiling water to the batter, mixing on low speed.
-                The batter will be thin; this is normal.
+                Spoon batter into a piping bag and pipe into the prepared donut
+                pan, filling each cavity ¾ full.
               </dd>
               <dt>5. Bake</dt>
               <dd>
-                Pour the batter evenly into the prepared pans. Bake for 30-35
-                minutes, or until a toothpick inserted into the center comes out
-                clean.
+                Bake for 8-10 minutes until lightly golden. Let cool in the pan
+                for 5 minutes, then transfer to a wire rack.
               </dd>
-              <dt>6. Cool and Frost</dt>
+              <dt>6. Make Glaze</dt>
               <dd>
-                Let the cakes cool in the pans for 10 minutes, then transfer to
-                a wire rack to cool completely. Frost with chocolate ganache or
-                your favorite frosting.
+                Whisk powdered sugar, cocoa powder, milk, and vanilla until
+                smooth. Dip each cooled donut into the glaze and let set.
               </dd>
             </dl>
           </div>
