--- a/pages/Chicken_Skewers.html
+++ b/pages/Chicken_Skewers.html
@@ -82,7 +82,7 @@
       <section class="wrapper hidden">
         <section class="recipeHeader">
           <div class="recipeDetail">
-            <h1>Chicken Skewers with Slices of Sweet Peppers</h1>
+            <h1>Chicken Skewers and veggies</h1>
             <div class="timeAndType">
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
