--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
                 <div class="mainIngredientList">
-                  <span class="mainIngredient">Cocoa Powder</span>
+                  <span class="mainIngredient">Chocolate</span>
                   <span class="mainIngredient">Flour</span>
-                  <span class="mainIngredient">Eggs</span>
+                  <span class="mainIngredient">Sugar</span>
                 </div>
               </div>
               <div class="info">
