--- a/pages/Belgian_Waffles.html
+++ b/pages/Belgian_Waffles.html
@@ -252,12 +252,13 @@
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title">Chocolate Cake</span>
+                    <span class="title">Chocolate Glazed Donuts</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Cocoa</span>
+                        <span class="mainIngredient">Chocolate</span>
                         <span class="mainIngredient">Flour</span>
+                        <span class="mainIngredient">Sugar</span>
                       </div>
                     </div>
                   </div>
