--- a/pages/Banana_Bread.html
+++ b/pages/Banana_Bread.html
@@ -197,12 +197,13 @@
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title">Chocolate Cake</span>
+                    <span class="title">Chocolate Glazed Donuts</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
                         <span class="mainIngredient">Chocolate</span>
                         <span class="mainIngredient">Flour</span>
+                        <span class="mainIngredient">Sugar</span>
                       </div>
                     </div>
                   </div>
