--- a/pages/Cheesecake.html
+++ b/pages/Cheesecake.html
@@ -193,13 +193,13 @@
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title">Chocolate Cake</span>
+                    <span class="title">Chocolate Glazed Donuts</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
                         <span class="mainIngredient">Chocolate</span>
-                        <span class="mainIngredient">Eggs</span>
-                        <span class="mainIngredient">Butter</span>
+                        <span class="mainIngredient">Flour</span>
+                        <span class="mainIngredient">Sugar</span>
                       </div>
                     </div>
                   </div>
